
syntax = "proto3";
option optimize_for = CODE_SIZE;

package tests;

// import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

message TestMessage {
    string messageId = 1;
    google.protobuf.Any body = 2;
  }

message SomeMessage {
    string juttu = 1;
}